--- a/GadgetToJScript/GadgetToJScript.csproj
+++ b/GadgetToJScript/GadgetToJScript.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -85,6 +85,8 @@
     <EmbeddedResource Include="templates\jscript.template" />
     <EmbeddedResource Include="templates\jscript-regfree.template" />
     <EmbeddedResource Include="templates\vbscript.template" />
+    <EmbeddedResource Include="templates\vbascripthex.template" />
+    <EmbeddedResource Include="templates\vbascriptb64.template" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
