--- a/GadgetToJScript/GadgetToJScript.csproj
+++ b/GadgetToJScript/GadgetToJScript.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -12,6 +12,7 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -22,6 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -31,6 +33,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -61,6 +64,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -71,7 +75,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestAssemblyLoader.cs" />
+    <Compile Include="_AssemblyLoader.cs" />
     <Compile Include="_ASurrogateGadgetGenerator.cs" />
     <Compile Include="_DisableTypeCheckGadgetGenerator.cs" />
     <Compile Include="_SurrogateSelector.cs" />
@@ -81,12 +85,20 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
-    <EmbeddedResource Include="templates\htascript.template" />
-    <EmbeddedResource Include="templates\jscript.template" />
-    <EmbeddedResource Include="templates\jscript-regfree.template" />
-    <EmbeddedResource Include="templates\vbscript.template" />
-    <EmbeddedResource Include="templates\vbascripthex.template" />
-    <EmbeddedResource Include="templates\vbascriptb64.template" />
+    <EmbeddedResource Include="templates\GT4_8\htascript.template" />
+    <EmbeddedResource Include="templates\GT4_8\jscript.template" />
+    <EmbeddedResource Include="templates\GT4_8\jscript-regfree.template" />
+    <EmbeddedResource Include="templates\GT4_8\vbscript.template" />
+    <EmbeddedResource Include="templates\GT4_8\vbascripthex.template" />
+    <EmbeddedResource Include="templates\GT4_8\vbascriptb64.template" />
+    <EmbeddedResource Include="templates\LT4_8\htascript.template" />
+    <EmbeddedResource Include="templates\LT4_8\jscript-regfree.template" />
+    <EmbeddedResource Include="templates\LT4_8\jscript.template" />
+    <EmbeddedResource Include="templates\LT4_8\vbascriptb64.template" />
+    <EmbeddedResource Include="templates\LT4_8\vbascripthex.template" />
+    <EmbeddedResource Include="templates\LT4_8\vbscript.template" />
+    <EmbeddedResource Include="templates\LT4_8\htascript-regfree.template" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
